--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,9 @@
     <title> BPD Officer Records</title>
   </head>
   <body>
+  <div class="container">
     <h1>Baltimore Police Department Officer Records</h1>
     <p>Use this site to edit and view raw data on arrests and firearm recovery</p>
+    </div>
   </body>
 </html>
