1. Add officer index page 2. Add officer controller and index action 3. Add route to officers page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
     <div class = "text-white bg-secondary">
       <h2>Baltimore Police Department</h2>
     </div>
-    <p>Use this site to edit and view raw data on arrests and firearm recovery</p>
+    <p>Use this site to edit and view raw data on arrests and firearm recovery.</p>
     <a href="/officers" class="btn btn-info" role="button">Enter Site</a>
   </div>
   </body>
