--- a/app/views/officers/show.html.erb
+++ b/app/views/officers/show.html.erb
@@ -9,15 +9,22 @@
       <h2>Baltimore Police Department</h2>
     </div>
     </div>
-<h1>Officer Information</h1>
-<h4>Details:</h4>
-<ul>
-  <li><b>Name: </b><%= @officer.name %></li>
-  <li><b>Badge Number: </b><%= @officer.badge_number %></li> 
-  <li><b>Under Investigation: </b><%= @officer.under_investigation == true ? "Yes": "No" %></li>
-  <li><b>Total Arrests: </b><%#= @officer.count_arrests %></li>
-  <li><b>All Arrests: </b><%#= link_to "Link", controller: "officer_arrests", action: "index", id: @officer.id %></li>
-</ul>
-</br>
-<h5>Record created at: <%= @officer.created_at %></h5>
-<h5>Record updated at: <%= @officer.updated_at %></h5>
+<table class="table table-bordered">
+    <tr>
+      <th>Name</th>
+      <th>Badge Number</th>
+      <th>Under Investigation</th>
+      <th>Total Arrests</th>
+      <th>All Arrests</th>
+    </tr>
+    <tr>
+        <td><%= @officer.name %> </td>
+        <td><%= @officer.badge_number %></td>
+        <td><%= @officer.under_investigation == true ? "Yes": "No" %></td>
+        <td><%= @officer.count_arrests %></td>
+        <td>nil</td>
+    </tr>
+</table>
+<br>
+<p><b>Record created: </b><%= @officer.created_at %></p>
+<p><b>Record updated: </b><%= @officer.updated_at %></p>
