1. Add update action to officers controller 2. Add routes for patch for updating officer

--- a/app/views/officers/show.html.erb
+++ b/app/views/officers/show.html.erb
@@ -22,7 +22,7 @@
         <td><%= @officer.badge_number %></td>
         <td><%= @officer.under_investigation == true ? "Yes": "No" %></td>
         <td><%= @officer.count_arrests %></td>
-        <td>nil</td>
+        <td>link goes here</td>
     </tr>
 </table>
 <br>
