add nav bar to all existing pages

--- a/app/views/arrests/index.html.erb
+++ b/app/views/arrests/index.html.erb
@@ -2,11 +2,25 @@
 <html>
   <head>
     <title> BPD Officer Records</title>
+    
   </head>
   <body>
+<nav class="navbar navbar-expand-sm bg-light justify-content-left">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="/officers">Officers</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/arrests">Arrests</a>
+    </li>
+  </ul>
+</nav>
+<br>
+
+
     <div class="container">
-    <div class = "text-white bg-secondary">
-      <h2>Baltimore Police Department</h2>
+    <div class = "text-white bg-primary">
+      <h3>Baltimore Police Department Records</h3>
     </div>
     </div>
 
