--- a/app/views/officers/show.html.erb
+++ b/app/views/officers/show.html.erb
@@ -4,9 +4,20 @@
     <title> BPD Officer Records</title>
   </head>
   <body>
+  <nav class="navbar navbar-expand-sm bg-light justify-content-left">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="/officers">All Officers</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/arrests">All Arrests</a>
+    </li>
+  </ul>
+</nav>
+<br>
     <div class="container">
-    <div class = "text-white bg-secondary">
-      <h2>Baltimore Police Department</h2>
+    <div class = "text-white bg-primary">
+      <h3>Baltimore Police Department Records</h3>
     </div>
     </div>
 <table class="table table-bordered">
