--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,9 +4,10 @@
     <title> BPD Officer Records</title>
   </head>
   <body>
+  
   <div class="container">
-    <div class = "text-white bg-secondary">
-      <h2>Baltimore Police Department</h2>
+    <div class = "text-white bg-primary">
+      <h3>Baltimore Police Department Records</h3>
     </div>
     <p>Use this site to edit and view raw data on arrests and firearm recovery.</p>
     <a href="/officers" class="btn btn-info" role="button">Enter Site</a>
