--- a/app/views/officer_arrests/index.html.erb
+++ b/app/views/officer_arrests/index.html.erb
@@ -20,23 +20,23 @@
       <h3>Baltimore Police Department Records</h3>
     </div>
     </div>
+    <center><h5>Officer Arrest Records: <%= @officer.name %></h5></center>
 <table class="table table-bordered">
     <tr>
       <th>Name</th>
-      <th>Badge Number</th>
-      <th>Under Investigation</th>
-      <th>Total Arrests</th>
-      <th>All Arrests</th>
+      <th>Age</th>
+      <th>Arrest Category</th>
+      <th>Firearm Recovered?</th>
+      <th>Record</th>
     </tr>
-    <tr>
-        <td><%= @officer.name %> </td>
-        <td><%= @officer.badge_number %></td>
-        <td><%= @officer.under_investigation == true ? "Yes": "No" %></td>
-        <td><%= @officer.count_arrests %></td>
-        <td><%= link_to "View", controller: "officer_arrests", action: "index", id: @officer.id %></td>
+      <% @arrests.each do |arrest| %>
+        <tr>
+        <td> <%= arrest.name %></td>
+        <td> <%= arrest.age %></td>
+        <td> <%= arrest.charge_description %></td>
+        <td> <%= arrest.firearm %></td>
+        <td> <%#= link_to "Link", controller: "arrests", action: "show", id: arrest.id %></td>
+      <% end %>
     </tr>
 </table>
-<br>
-<p><b>Record created: </b><%= @officer.created_at %></p>
-<p><b>Record updated: </b><%= @officer.updated_at %></p>
 </html>
