1. Add tests for officer index page

--- a/app/views/officers/index.html.erb
+++ b/app/views/officers/index.html.erb
@@ -31,7 +31,7 @@
     <tr>
         <td><%= link_to officer.name, "/officers/#{officer.id}" %> </td>
         <td> <%= officer.created_at %></td>
-        <td> <%= link_to "Update Officer", "/officers/#{officer.id}/edit" %> </td>
+        <td> <%= link_to "Update #{officer.name}", "/officers/#{officer.id}/edit" %> </td>
       <% end %>
     </tr>
 </table>
