--- a/app/views/officers/index.html.erb
+++ b/app/views/officers/index.html.erb
@@ -3,7 +3,7 @@
   <head>
     <title> BPD Officer Records</title>
   </head>
-  <body>
+  <header>
   <nav class="navbar navbar-expand-sm bg-light justify-content-left">
   <ul class="navbar-nav">
     <li class="nav-item">
@@ -14,6 +14,8 @@
     </li>
   </ul>
 </nav>
+  </header>
+  <body>
 <br>
     <div class="container">
     <div class = "text-white bg-primary">
