--- a/app/views/arrests/index.html.erb
+++ b/app/views/arrests/index.html.erb
@@ -43,7 +43,7 @@
       <td> <%= arrest.firearm %></td>
       <td> <%= arrest.created_at %></td>
       <td> <%= arrest.updated_at %></td>
-      <td> <%#= link_to "Link", controller: "arrests", action: "show", id: arrest.id %></td>
+      <td> <%= link_to "View #{arrest.name}", controller: "arrests", action: "show", id: arrest.id %></td>
       <% end %>
     </tr>
 </table>
