--- a/app/views/officers/show.html.erb
+++ b/app/views/officers/show.html.erb
@@ -39,7 +39,8 @@
 <br>
 <p><b>Record created: </b><%= @officer.created_at %></p>
 <p><b>Record updated: </b><%= @officer.updated_at %></p>
-
-<%= link_to "Update Officer", controller: "officers", action: "edit", id: @officer.id %><
+<br>
+<br>
+<p><%= link_to "Update Officer", controller: "officers", action: "edit", id: @officer.id %></p>
 
 </html>
