Add test for link on officer_arrests index page to open to create arrest page Add link_to action on officer_arrests index page to open to create arrest page Add route to new arrest page in routes

--- a/app/views/officer_arrests/index.html.erb
+++ b/app/views/officer_arrests/index.html.erb
@@ -39,6 +39,8 @@
       <% end %>
     </tr>
 </table>
+
+<p><%= link_to "Create Arrest", controller: "officer_arrests", action: "new", id: @officer.id %></p>
 </html>
 
 
