Add Create Arrest Page linked to Officer Arrests Index page Add Form to new arrest creation page in Officer Arrests Ensure tests pass for new arrest creation page

--- a/app/views/officer_arrests/index.html.erb
+++ b/app/views/officer_arrests/index.html.erb
@@ -40,7 +40,7 @@
     </tr>
 </table>
 
-<p><%= link_to "Create Arrest", controller: "officer_arrests", action: "new", id: @officer.id %></p>
+<p><%= link_to "Create Arrest", "/officers/#{@officer.id}/arrests/new"  %></p>
 </html>
 
 
