--- a/app/views/arrests/edit.html.erb
+++ b/app/views/arrests/edit.html.erb
@@ -18,11 +18,24 @@
 <br>
 
 
-    <div class="container">
-    <div class = "text-white bg-primary">
-      <h3>Baltimore Police Department Records</h3>
-    </div>
-    </div>
+<div class="container">
+<div class = "text-white bg-primary">
+<h3>Baltimore Police Department Records</h3>
+</div>
+</div>
+
+    <%= form_with url: "/arrests/#{@arrest.id}", method: 'patch', local: true do |form| %>
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+    <%= form.label :age %>
+    <%= form.text_field :age %>
+    <%= form.label :charge_description %>
+    <%= form.text_field :charge_description %>
+    <%= form.label :firearm %>
+    <%= form.check_box :firearm %>
+    <%= form.submit "Update Arrest" %>
+    <% end %>
+  
 
 
 </body>
