1. Add Test to sort arrests alphabetically to officer_arrests index 2. Add link_to to officer_arrests to sort arrests alphabetically when link is clicked 3. Add table class and div class to narrow down testing for sorted names 4. Add test to ensure names are sorted when link is clicked

--- a/app/views/arrests/index.html.erb
+++ b/app/views/arrests/index.html.erb
@@ -23,6 +23,8 @@
       <h3>Baltimore Police Department Records</h3>
     </div>
     </div>
+    <br>
+<left><h5>Arrests Involving Firearms Only</h5></left>
 
 <table class="table table-bordered">
     <tr>
