Add test to arrests index to check for edit arrestee Add link_to to arrests index to allow direct access to editing arrestee

--- a/app/views/arrests/index.html.erb
+++ b/app/views/arrests/index.html.erb
@@ -45,6 +45,7 @@
       <td> <%= arrest.firearm %></td>
       <td> <%= arrest.created_at %></td>
       <td> <%= arrest.updated_at %></td>
+      <td> <%= link_to "Edit #{arrest.name}", controller: "arrests", action: "edit", id: arrest.id %></td>
       <td> <%= link_to "View #{arrest.name}", controller: "arrests", action: "show", id: arrest.id %></td>
       <% end %>
     </tr>
