add delete officer button add delete officer tests add route to delete officer add delete action to officers controller

--- a/app/views/arrests/index.html.erb
+++ b/app/views/arrests/index.html.erb
@@ -34,7 +34,8 @@
       <th>Firearm Recovered?</th>
       <th>Created At</th>
       <th>Updated At</th>
-      <th>Record</th>
+      <th>Edit</th>
+      <th>View</th>
     </tr>
 
     <% @arrests.each do |arrest| %>
