--- a/app/views/arrests/show.html.erb
+++ b/app/views/arrests/show.html.erb
@@ -40,5 +40,9 @@
 <p><b>Record updated: </b><%= @arrest.updated_at %></p>
 
 <p><%= link_to "Update Arrest", controller: "arrests", action: "edit", id: @arrest.id %></p>
+<br>
+<%= form_with url: "/arrests/#{@arrest.id}", method: 'delete', local: true do |form| %>
+<%= form.submit "Delete Arrest" %>
+<% end %>
 
 </html>
