Update Arrest Model with age threshold check Update Index page with Form and Button to submit Age value for threshold check Add age threshold check method to OfficerArrests Index action Add test to Officer Arrests Index spec

--- a/app/views/officer_arrests/index.html.erb
+++ b/app/views/officer_arrests/index.html.erb
@@ -41,6 +41,13 @@
     </tr>
 </table>
 </div>
+
+<%= form_tag("/officers/#{@officer.id}/arrests", method: "get") do %>
+    <%= label_tag :entered_age, "Find All Arrests Above Age Entered Below"  %><br>
+    <%= text_field_tag :entered_age %>
+    <%= submit_tag "Return Results" %>
+<% end %>
+
 <p><%= link_to "Create Arrest", "/officers/#{@officer.id}/arrests/new"  %></p>
 <br>
 <p><%= link_to "Sort Arrests Alphabetically", "/officers/#{@officer.id}/arrests?sort=alpha"%></p>
