Add form_submit button to arrests_index arrests/:id_show and officer_arrests that deletes arrest record Add redirect to arrests_index page after deletion

--- a/app/views/arrests/show.html.erb
+++ b/app/views/arrests/show.html.erb
@@ -42,7 +42,8 @@
 <p><%= link_to "Update Arrest", controller: "arrests", action: "edit", id: @arrest.id %></p>
 <br>
 <%= form_with url: "/arrests/#{@arrest.id}", method: 'delete', local: true do |form| %>
-<%= form.submit "Delete Arrest" %>
-<% end %>
+    <%= form.submit "Delete Arrest #{@arrest.name}" %>
+    <% end %>
+</form>
 
 </html>
