--- a/app/views/arrests/index.html.erb
+++ b/app/views/arrests/index.html.erb
@@ -36,6 +36,7 @@
       <th>Updated At</th>
       <th>Edit</th>
       <th>View</th>
+      <th>Delete</th>
     </tr>
 
     <% @arrests.each do |arrest| %>
@@ -48,6 +49,9 @@
       <td> <%= arrest.updated_at %></td>
       <td> <%= link_to "Edit #{arrest.name}", controller: "arrests", action: "edit", id: arrest.id %></td>
       <td> <%= link_to "View #{arrest.name}", controller: "arrests", action: "show", id: arrest.id %></td>
+      <td> <%= form_with url: "/arrests/#{arrest.id}", method: 'delete', local: true do |form| %>
+          <%= form.submit "Delete Arrest #{arrest.name}" %>
+          <% end %> </td>
       <% end %>
     </tr>
 </table>
