add passing test in officer index page using within to ensure elements show up in sorted order update officers_controller to include sorting method .created_at_desc add div to officers index page to allow isolation of testing created_at_desc model method

--- a/app/views/officers/index.html.erb
+++ b/app/views/officers/index.html.erb
@@ -22,6 +22,7 @@
       <h3>Baltimore Police Department Records</h3>
     </div>
     </div>
+<div id='officer_table'>    
 <table class="table table-bordered">
     <tr>
       <th>Officer Name</th>
@@ -32,7 +33,7 @@
 
       <% @officers.each do |officer| %>
     <tr>
-        <td><%= link_to officer.name, "/officers/#{officer.id}" %> </td>
+        <td class = "officer_name_link"><%= link_to officer.name, "/officers/#{officer.id}" %> </td>
         <td> <%= officer.created_at %></td>
         <td> <%= link_to "Update #{officer.name}", "/officers/#{officer.id}/edit" %> </td>
         <td> <%= form_with url: "/officers/#{officer.id}", method: 'delete', local: true do |form| %>
@@ -41,5 +42,6 @@
       <% end %>
     </tr>
 </table>
+</div>
 <%= link_to "New Officer", "/officers/new" %>
 </html>
