--- a/app/views/arrests/show.html.erb
+++ b/app/views/arrests/show.html.erb
@@ -39,11 +39,8 @@
 <p><b>Record created: </b><%= @arrest.created_at %></p>
 <p><b>Record updated: </b><%= @arrest.updated_at %></p>
 
-<p><%= link_to "Update Arrest", controller: "arrests", action: "edit", id: @arrest.id %></p>
+<p><%= button_to "Edit #{@arrest.name}", "/arrests/#{@arrest.id}/edit", method: :get %></p>
 <br>
-<%= form_with url: "/arrests/#{@arrest.id}", method: 'delete', local: true do |form| %>
-    <%= form.submit "Delete Arrest #{@arrest.name}" %>
-    <% end %>
-</form>
+<p><%= button_to "Delete #{@arrest.name}", "/arrests/#{@arrest.id}", method: :delete %></p>
 
 </html>
