update new spec to ensure arrest is associated with officer in officer_arrests

--- a/app/views/officer_arrests/index.html.erb
+++ b/app/views/officer_arrests/index.html.erb
@@ -28,6 +28,7 @@
       <th>Age</th>
       <th>Arrest Category</th>
       <th>Firearm Recovered?</th>
+      <th>Edit</th>
       <th>View</th>
       <th>Delete</th>
     </tr>
