--- a/app/views/officers/index.html.erb
+++ b/app/views/officers/index.html.erb
@@ -43,8 +43,13 @@
 </div>
 <br>
 <div id = "sort_by_arrests">
-<p class = "sort link" ><%= link_to "Sort Officers By Arrests(High to Low)", 
+<p class = "arrest sort" ><%= link_to "Sort Officers By Arrests(High to Low)", 
 "/officers?sort=arrest_count"%></p>
+</div>
+<br>
+<div id = "reset_sort">
+<p class = "reset sorted" ><%= link_to "Reset Sorted Officers", 
+"/officers?sort=reset"%></p>
 </div>
 <br>
 <%= button_to  "New Officer", "/officers/new", method: :get %>
